[package]
name = "direlera-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt"] }
byteorder = "1.4"
chrono = "0.4"
bytes = "1.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
color-eyre = "0.6.5"
encoding_rs = "0.8"


[profile.release]
debug = false
